Bootstrap styles added and Formik forms

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Matias Micheletto"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Alkemy Challenge</title>
+    <title>Alkemy Hotel Menu</title>
   </head>
   <body>
     <noscript>Debes habilitar JavaScript en tu navegador para poder ejecutar esta app.</noscript>
